[FLINK-40335] Address PR comment: Use List.of()